@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-08T16:24:32Z",
+  "timestamp" : "2022-04-09T16:22:40Z",
   "count_outdated" : 61,
   "uniques_outdated" : 47,
-  "count" : 110,
-  "uniques" : 75,
+  "count" : 111,
+  "uniques" : 76,
   "clones" : [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 4, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
