@@ -1,5 +1,5 @@
 {
-  "count": 49,
+  "count": 50,
   "uniques": 18,
   "clones": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2022-04-08T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
